# AEL_CV_ML_DL

./: .gitignore  README.md  pyproject.toml
tests/: test_env.py
