[tool.poetry]
name = "ael-cv-ml-dl"
version = "0.1.0"
description = "AEL's repo for Computer Vision, Machine Learning, and Deep Learning"
authors = ["Kalidindi Hemanth Sai Kiran <hemanth1.edu@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.26,<1.27"
pandas = ">=2.2"
matplotlib = ">=3.8"
seaborn = ">=0.13"
plotly = ">=5.20"
scikit-learn = ">=1.5"
opencv-python = ">=4.9"
scikit-image = ">=0.22"
imageio = ">=2.34"
albumentations = ">=1.4"
torch = ">=2.3"
torchvision = ">=0.18"
timm = ">=0.9"
transformers = ">=4.41"
jupyter = ">=1.0"
ipython = ">=8.24"
rich = ">=13.7"
loguru = ">=0.7"
wandb = ">=0.16"
mlflow = ">=2.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
flake8 = "^7.0"
isort = "^5.13"
pytest = "^8.2"
pre-commit = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"